@@ -1,0 +1,56 @@
+<?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
+/* Translated by @lherlaar */
+	$lang['list_add'] 				= 'Toevoegen';
+	$lang['list_actions'] 			= 'Acties';
+	$lang['list_page'] 				= 'Pagina';	
+	$lang['list_paging_of'] 		= 'van';
+	$lang['list_displaying']		= 'Records {start} tot {end} van {results} worden getoond';
+	$lang['list_filtered_from']		= '(gefilterd uit {total_results} records)';
+	$lang['list_show_entries']		= 'Toon {paging} records';
+	$lang['list_no_items']			= 'Geen records om te tonen';
+	$lang['list_zero_entries']		= 'Records 0 tot 0 van 0 records';
+	$lang['list_search'] 			= 'Zoeken';	
+	$lang['list_search_all'] 		= 'Zoek alles';
+	$lang['list_clear_filtering'] 	= 'Verwijder filter';
+	$lang['list_delete'] 			= 'Verwijder';
+	$lang['list_edit'] 				= 'Bewerk';	
+	$lang['list_paging_first'] 		= 'Eerste';
+	$lang['list_paging_previous'] 	= 'Vorige';
+	$lang['list_paging_next'] 		= 'Volgende';
+	$lang['list_paging_last'] 		= 'Laatste';
+	$lang['list_loading'] 			= 'Laden...';	
+
+	$lang['form_edit'] 				= 'Wijzigen';
+	$lang['form_back_to_list'] 		= 'Terug naar lijst';
+	$lang['form_update_changes'] 	= 'Verwerk wijzigingen';
+	$lang['form_cancel'] 			= 'Annuleren';	
+	$lang['form_update_loading'] 	= 'Verwerken wijzigingen...';
+	$lang['update_success_message'] = 'De gegevens zijn succesvol verwerkt.';	
+	$lang['form_go_back_to_list'] 	= 'Ga terug naar lijst';
+	
+	$lang['form_add'] 				= 'Toevoegen';
+	$lang['insert_success_message'] = 'De gegevens zijn succesvol opgeslagen in de database.';
+	$lang['form_or']				= 'of';
+	$lang['form_save'] 				= 'Opslaan';
+	$lang['form_insert_loading'] 	= 'Opslaan gegevens...';
+	
+	$lang['form_upload_a_file'] 	= 'File uploaden';
+	$lang['form_upload_delete'] 	= 'verwijder';
+	$lang['form_button_clear'] 		= 'Leegmaken';	
+	
+	$lang['delete_success_message'] = 'De gegevens zijn succesvol verwijderd uit de database.';
+	$lang['delete_error_message'] 	= 'De gegevens zijn niet verwijderd uit de database.';
+	
+	/* Javascript messages */
+	$lang['alert_add_form']			= 'De gegevens worden niet opgeslagen.\\nTerugkeren naar de lijst?';
+	$lang['alert_edit_form']		= 'De gegevens worden niet opgeslagen.\\nTerugkeren naar de lijst?';
+	$lang['alert_delete']			= 'Record verwijderen?';
+	
+	$lang['insert_error']			= 'Er is een fout opgetreden bij het toevoegen.';
+	$lang['update_error']			= 'Er is een fout opgetreden bij het verwerken.';
+	
+	/* Added in version 1.2.1 */
+	$lang['set_relation_title']		= 'Selecteer {field_display_as}';
+	$lang['list_record']			= 'Record';
+	$lang['form_inactive']			= 'inactief';
+	$lang['form_active']			= 'actief';
