@@ -1,4 +1,5 @@
 v 1.2.2
+	Adding Dutch language. 
 	Adding the default_per_page at the config file. This specifies the first visit per page that a user should see at the list page. For example 25 rows per page.
 	#13 - The list search and ordering is not working with the n-n relation columns.
 	Small bug fixes:
